--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>overlaying effect</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div class="item"></div>
@@ -10,8 +10,5 @@
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
-    <script src='../output/bundle.js'>
-
-    </script>
   </body>
 </html>
